<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <RelativeLayout android:id="@+id/mainContainer" android:layout_width="match_parent"
        android:layout_height="match_parent" android:visibility="visible">

        <LinearLayout android:id="@+id/addressContainer" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:gravity="center">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city"
                android:layout_width="247dp"
                android:layout_height="51dp"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="16dp"
                android:hint="@string/placeHolder"
                android:imeOptions="actionDone"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="24dp" />
            <TextView android:id="@+id/updated_at" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="14dp"
                android:text="20 April 2012, 20:08 PM"/>
        </LinearLayout>


        <LinearLayout android:id="@+id/overviewContainer" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView android:id="@+id/status" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="18dp"
                android:layout_gravity="center"
                android:text="@string/sky"/>
            <TextView android:id="@+id/temp" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="90dp"
                android:fontFamily="sans-serif-thin" android:layout_gravity="center"/>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:gravity="center">
                <TextView android:id="@+id/temp_min" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/min_temp"/>
                <Space android:layout_width="50dp" android:layout_height="wrap_content"/>

                <TextView android:id="@+id/temp_max" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/max_temp"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout android:id="@+id/detailsContainer" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:weightSum="3">
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/sunrise"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12dp" android:text="@string/sunrise"/>
                    <TextView android:id="@+id/sunrise" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14dp"/>
                </LinearLayout>
                <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/sunset"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12dp" android:text="@string/sunset"/>
                    <TextView android:id="@+id/sunset" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14dp"/>
                </LinearLayout>
                <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/wind"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12dp" android:text="@string/wind"/>
                    <TextView android:id="@+id/wind" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14dp"/>
                </LinearLayout>
            </LinearLayout>

            <Space android:layout_width="wrap_content" android:layout_height="10dp"/>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:weightSum="3">
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12dp" android:text="@string/pressure"/>
                    <TextView android:id="@+id/pressure" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14dp"/>
                </LinearLayout>
                <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/humidity"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12dp" android:text="@string/humidity"/>
                    <TextView android:id="@+id/humidity" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14dp"/>
                </LinearLayout>
                <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/temp"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12dp" android:text="@string/feel_like"/>
                    <TextView android:id="@+id/feels_like" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>